# plexus

./: .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  Cargo.toml  ORIENTATION.md  README.md  RELEASE.md  dist-workspace.toml
.github/workflows/: release.yml
.llm-orc/ensembles/: code-concepts.yaml  embedding-similarity.yaml  extract-semantic.yaml  graph-analysis.yaml  plexus-compositional.yaml  plexus-graph-analysis.yaml  plexus-refinement.yaml  plexus-semantic-micro.yaml  plexus-semantic-v2.yaml  plexus-semantic.yaml  spike-synthesized.yaml  spike-themes.yaml  test-theme-extractor.yaml
.llm-orc/profiles/: analyst-mistral.yaml  synthesizer-local.yaml
docs/: ORIENTATION.md  codebase-audit.md  cycle-status.md  domain-model.md  essay.md  integration-debt.md  integration-guide.md  interaction-specs.md  invariants.md  product-discovery.md  rdd-graduation.md  research-log.md  roadmap.md  scenarios.md  semantic-adapters-behavioral-spec.md  semantic-adapters-design.md  semantic-adapters-diagrams.md  semantic-adapters-overview.md  semantic-adapters.md  system-design.md  vision.md
docs/adr/: 000-research-driven-development.md  001-semantic-adapter-architecture.md  002-storage-location.md  003-reinforcement-mechanics.md  004-first-adapter-pair.md  005-normalization-floor.md  006-adapter-engine-wiring.md  007-contribution-persistence.md  008-project-scoped-provenance.md  009-tag-concept-bridging.md  010-enrichment-trait-and-loop.md  011-bidirectional-adapter.md  012-unified-ingest-pipeline.md  013-typed-multi-hop-traversal.md  014-transport-independent-api.md  015-workflow-oriented-write-surface.md  016-library-rule-and-xdg-storage.md  017-shared-db-multi-app-context.md  018-emission-level-replication.md  019-phased-extraction.md  020-declarative-adapter-specs.md  021-phase3-llm-orc-integration.md  022-parameterized-enrichments.md  023-graph-analysis.md  024-core-and-external-enrichment-architecture.md  025-declarative-adapter-spec-extensions.md  026-embedding-enrichment.md  028-universal-mcp-ingest.md  029-architectural-consolidation.md
docs/archive/: cycle-status-default-install-lens-design.md  domain-model.md  interaction-specs.md  roadmap.md  scenarios-index.md
docs/audits/: argument-audit-002.md  conformance-scan-036-037.md
docs/decisions/: 000-research-driven-development.md  001-semantic-adapter-architecture.md  003-reinforcement-mechanics.md  004-first-adapter-pair.md  005-normalization-floor.md  006-adapter-engine-wiring.md  007-contribution-persistence.md  008-project-scoped-provenance.md  009-tag-concept-bridging.md  011-bidirectional-adapter.md  012-unified-ingest-pipeline.md  013-typed-multi-hop-traversal.md  014-transport-independent-api.md  015-workflow-oriented-write-surface.md  019-phased-extraction.md  020-declarative-adapter-specs.md  021-phase3-llm-orc-integration.md  022-parameterized-enrichments.md  023-graph-analysis.md  024-core-and-external-enrichment-architecture.md  026-embedding-enrichment.md  027-contribution-retraction.md  028-universal-mcp-ingest.md  030-structural-module-trait.md  031-structural-output-and-handoff.md  032-first-structural-module.md  033-lens-declaration.md  034-composable-query-filters.md  035-event-cursor-persistence.md  036-mcp-query-surface.md  037-consumer-spec-loading.md  038-release-binary-feature-profile.md  039-created-at-property-contract.md  040-discovery-gap-trigger-sources.md  041-lens-grammar-conventions.md  042-dimension-extensibility-guidance.md  043-max-abs-scale-normalization.md
docs/design/: adapter-architecture.md  adapters.md
docs/essays/: 002-lens-storage-mechanism.md  01-self-reinforcing-dynamics.md  02-opacity-problem.md  03-plexus-architecture.md  04-trellis.md  05-eddi-movement.md  06-reinforcement-mechanics.md  07-first-adapter-pair.md  08-runtime-architecture.md  10-building-the-public-surface.md  11-two-consumer-validation.md  12-provenance-as-epistemological-infrastructure.md  (+14 more)
src/: api.rs  lib.rs  llm_orc.rs
src/mcp/: mod.rs  (+1 more)
tests/: acceptance.rs  spike_01_connectivity.rs  spike_02_importance.rs  spike_02b_seed_strategies.rs  spike_02c_semantic_quality.rs  spike_02d_traversal_strategies.rs  spike_02e_hybrid_strategies.rs  spike_03_link_semantic.rs  spike_03b_multi_corpus.rs  spike_04_extraction.rs  spike_05_embeddings.rs  spike_06_self_ingestion.rs  spike_07_link_density.rs  spike_08_hierarchy.rs  spike_p1_llm_propagation.rs  spike_p1_propagation_params.rs  spike_p2_multi_corpus.rs  spike_p3_normalization.rs  spike_s1_latency.rs  spike_s1_latency_micro.rs  spike_s2_concurrency.rs  spike_s2_concurrency_micro.rs
(+317 files in other folders)
