[package]
name = "plexus"
description = "Network-aware knowledge graph engine with self-reinforcing edges"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mrilikecoding/plexus"

[[bin]]
name = "plexus"
path = "src/bin/plexus.rs"

[features]
default = []
# Enable real LLM calls for spike tests; when disabled, tests use mock responses
real_llm = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
dashmap = "6.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
pulldown-cmark = "0.10"

# MCP server
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = { version = "1.0", features = ["chrono04"] }
getrandom = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
walkdir = "2.4"
tokio-test = "0.4"
regex-lite = "0.1"
rand = "0.8"
