[package]
name = "plexus"
description = "Network-aware knowledge graph engine with self-reinforcing edges"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mrilikecoding/plexus"

[[bin]]
name = "plexus"
path = "src/bin/plexus.rs"

[features]
default = []
# Enable real LLM calls for spike tests; when disabled, tests use mock responses
real_llm = []
# ONNX-based text embeddings (fastembed) and persistent vector search (sqlite-vec)
embeddings = ["dep:fastembed", "dep:sqlite-vec"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
dashmap = "6.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
pulldown-cmark = "0.10"
serde_yaml = "0.9"

# MCP server
rmcp = { version = "0.14", features = ["server", "client", "transport-io", "transport-child-process"] }
schemars = { version = "1.0", features = ["chrono04"] }
getrandom = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }
dirs = "5.0"

# Embeddings (optional, behind `embeddings` feature)
fastembed = { version = "5", optional = true, default-features = false, features = ["ort-download-binaries", "hf-hub-native-tls"] }
sqlite-vec = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3.10"
walkdir = "2.4"
tokio-test = "0.4"
regex-lite = "0.1"
rand = "0.8"
